deployment-yamls/feedback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: feedback
  name: feedback
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: feedback
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ms-network: "true"
        io.kompose.service: feedback
    spec:
      containers:
        - image: shyamkira/feedback
          name: feedback
          ports:
            - containerPort: 4545
          resources: {}
      restartPolicy: Always
status: {}
