deployment-yamls/todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: todos
  name: todos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: todos
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ms-network: "true"
        io.kompose.service: todos
    spec:
      containers:
        - image: shyamkira/todos
          name: todos
          ports:
            - containerPort: 7545
          resources: {}
      restartPolicy: Always
status: {}
