deployment-yamls/feedback-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: feedback
  name: feedback
spec:
  ports:
    - name: "4545"
      port: 4545
      targetPort: 4545
  selector:
    io.kompose.service: feedback
status:
  loadBalancer: {}
