deployment-yamls/ielts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ielts
  name: ielts
spec:
  ports:
    - name: "4955"
      port: 4955
      targetPort: 4955
  selector:
    io.kompose.service: ielts
status:
  loadBalancer: {}
