deployment-yamls/todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: todos
  name: todos
spec:
  ports:
    - name: "7545"
      port: 7545
      targetPort: 7545
  selector:
    io.kompose.service: todos
status:
  loadBalancer: {}
